Converted parameter String to path before using it in Files.readAllBytes.